Move types to dev dependencies

--- a/utils/package.json
+++ b/utils/package.json
@@ -42,18 +42,18 @@
         "npm-run-all": "^4.1.2",
         "shx": "^0.2.2",
         "tslint": "5.11.0",
-        "typescript": "4.2.2"
-    },
-    "dependencies": {
+        "typescript": "4.2.2",
         "@0x/types": "^3.3.4",
         "@0x/typescript-typings": "^5.2.1",
         "@types/mocha": "^5.2.7",
         "@types/node": "12.12.54",
+        "ethereum-types": "^3.6.0"
+    },
+    "dependencies": {
         "abortcontroller-polyfill": "^1.1.9",
         "bignumber.js": "~9.0.0",
         "chalk": "^2.3.0",
         "detect-node": "2.0.3",
-        "ethereum-types": "^3.6.0",
         "ethereumjs-util": "^7.1.0",
         "ethers": "~4.0.4",
         "isomorphic-fetch": "2.2.1",
